tests/errors/builtin_keyword_argument.py
# expect_error: keyword arguments
print(len(obj=[1, 2, 3]))